// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layouts should handle "disabledOn" prop 1`] = `
<DesktopLayout
  disabledOn={
    Array [
      "xl",
      "xs",
    ]
  }
>
  <div
    className="layout desktop disabled-xl disabled-xs"
  >
    Hello, world!
  </div>
</DesktopLayout>
`;

exports[`Layouts should handle "disabledOn" prop 2`] = `
<MobileLayout
  disabledOn={
    Array [
      "xl",
      "xs",
    ]
  }
>
  <div
    className="layout mobile disabled-xl disabled-xs"
  >
    Hello, world!
  </div>
</MobileLayout>
`;

exports[`Layouts should handle "element" prop 1`] = `
<DesktopLayout
  className="test-class"
  element="main"
  style={
    Object {
      "height": 128,
    }
  }
>
  <main
    className="layout desktop test-class "
    style={
      Object {
        "height": 128,
      }
    }
  >
    Hello, world!
  </main>
</DesktopLayout>
`;

exports[`Layouts should handle "element" prop 2`] = `
<MobileLayout
  className="test-class"
  element="main"
  style={
    Object {
      "height": 128,
    }
  }
>
  <main
    className="layout mobile test-class "
    style={
      Object {
        "height": 128,
      }
    }
  >
    Hello, world!
  </main>
</MobileLayout>
`;

exports[`Layouts should renders correctly 1`] = `
<DesktopLayout
  className="test-class"
  style={
    Object {
      "height": 128,
    }
  }
>
  <div
    className="layout desktop test-class "
    style={
      Object {
        "height": 128,
      }
    }
  >
    Hello, world!
  </div>
</DesktopLayout>
`;

exports[`Layouts should renders correctly 2`] = `
<MobileLayout
  className="test-class"
  style={
    Object {
      "height": 128,
    }
  }
>
  <div
    className="layout mobile test-class "
    style={
      Object {
        "height": 128,
      }
    }
  >
    Hello, world!
  </div>
</MobileLayout>
`;
